--- a/answers/3.md
+++ b/answers/3.md
@@ -54,6 +54,7 @@ coinFlip();
 */
 ```
 ```js
+// НЕ ДОДЕЛАЛ 
 function coinFlip() {
     
 const COIN = Math.floor(Math.random() * 100);
@@ -67,7 +68,6 @@ const COIN = Math.floor(Math.random() * 100);
  for (i = 1; i <= 1000; i++) {
      coinFlip()
 }
-// НЕ ДОДЕЛАЛ 
 ```
 ## Задача 6
 ```
@@ -211,14 +211,216 @@ console.log(element.toUpperCase());
 ```
 ```js
 function notIterationFruit(fruit) {
-    fruit = 'Apple';
+    fruit = 'Lemon';
     const fruits = ['Apple', 'Orange', 'Plum', 'Pineapple'];
     console.log(fruits.includes(fruit) ? fruit : null);
     
-}
+};
 notIterationFruit()
 ```
-## Задача 18
+## Задача 19
+```
+Напишите функцию, которая будет получать 2 аргумента
+1й аргумент - массив
+2й агрумент - елемент массива
+
+Функция должна удалять елемент и его соседей с массива, и возвращать новый массив 
+Изначальный массив не должен быть изменен
+
+1й пример: 
+Мы передали в функцию массив `fruit` и строку `Apple`
+Функция должна вернуть массив ['Plum', 'Pineapple']
+
+2й пример: 
+Мы передали в функцию массив `fruit` и строку `Orange`
+Функция должна вернуть массив ['Pineapple']
+
+3й пример: 
+Мы передали в функцию массив `fruit` и строку `Plum`
+Функция должна вернуть массив ['Apple']
+
+4й пример: 
+Мы передали в функцию массив `fruit` и строку `Pineapple`
+Функция должна вернуть массив ['Apple', 'Orange']
+```
+```js
+// 1 не доделал
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+
+function deleteFruit(fruitTwo, fruitElement) {
+    fruitElement = 'Apple';
+    fruitTwo = fruit.filter(function (elem) {
+        return elem !== fruitElement
+    });
+
+    console.log(fruitTwo);
+    console.log(fruit);
+};
+deleteFruit();
+```
+```js
+// 2 не доделал
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+
+function deleteFruit(fruitTwo, fruitElement) {
+    fruitElement = 'Apple';
+    fruitTwo = fruit.filter(item => item !== fruitElement);
+
+    console.log(fruitTwo);
+    console.log(fruit);
+};
+deleteFruit();
+```
+## Задача 20
+```
+Создайте новий массив из `fruit`, в котором не должно быть фруктов, начинающихся с буквы 'P'
+Регистр не имеет значения
+Массив fruit не должен быть изменен
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum', 'pineapple'];
+const fruitNoP = fruit.filter(function (elem) {
+    return elem <= 'P';
+});
+
+console.log(fruitNoP);
+console.log(fruit);
+```
+##Задача 21
+```
+Создайте новий массив из `fruit`, в котором не должено быть каждого 2го фрукта
+Массив fruit не должен быть изменен
+
+Например:
+Новый массив должен содержать только 1й и 3й елемент ['Apple', 'Plum']
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+const fruitNoTwoElement = fruit.slice();
+
+for (let i = 1; i < fruitNoTwoElement.length; i += 1) {
+    fruitNoTwoElement.splice(i, 1);
+}; 
+
+console.log(fruitNoTwoElement);
+console.log(fruit);
+```
+##Задача 22
+```
+Найдите студента (объект) с именем 'Sam' и выведите его в консоль
+```
+```js
+//
+const students = [
+  { id: 1, name: 'Quincy', grade: 21 },
+  { id: 2, name: 'Jason', grade: 33 },
+  { id: 3, name: 'Alexis', grade: 87 },
+  { id: 4, name: 'Sam', grade: 100 },
+  { id: 5, name: 'Katie', grade: 64 }
+];
+
+let studentSearch = students.find(person => person.name === 'Sam');
+
+console.log(studentSearch);
+```
+##Задача 23
+```
+Отсортируйте студентов по их грейду от большего к меньшему
+```
+```js
+const students = [
+  { id: 1, name: 'Quincy', grade: 21 },
+  { id: 2, name: 'Jason', grade: 33 },
+  { id: 3, name: 'Alexis', grade: 87 },
+  { id: 4, name: 'Sam', grade: 100 },
+  { id: 5, name: 'Katie', grade: 64 }
+];
+
+console.log(students.sort((a, b) => a.grade- b.grade));
+```
+##Задача 24
+```
+Используя массив 'students', создайте объект, в котором ключами будут `id`, а значениями - объекты
+Результат:
+{
+    "1": {
+        "id": 1,
+        "name": "Quincy",
+        "grade": 21
+    },
+    "2": {
+        "id": 2,
+        "name": "Jason",
+        "grade": 33
+    },
+    "3": {
+        "id": 3,
+        "name": "Alexis",
+        "grade": 87
+    },
+    "4": {
+        "id": 4,
+        "name": "Sam",
+        "grade": 100
+    },
+    "5": {
+        "id": 5,
+        "name": "Katie",
+        "grade": 64
+    }
+}
+```
+```js
+const students = [
+  { id: 1, name: 'Quincy', grade: 21 },
+  { id: 2, name: 'Jason', grade: 33 },
+  { id: 3, name: 'Alexis', grade: 87 },
+  { id: 4, name: 'Sam', grade: 100 },
+  { id: 5, name: 'Katie', grade: 64 }
+];
+
+const studentsObjact = students.forEach(item => console.log(item)) ;
+```
+##Задача 25
+```
+Создайте из строки объект, в котором ключами будут названия фруктов, а значениями - их количество
+Результат:
+{
+    pineapple: 2,
+    apple: 4,
+    orange: 3,
+    plum: 1
+}
+```
+```js
+/*
+const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
+let amountFruit = {};
+
+fruit.split(' ').forEach(item =>{
+    
+});
+
+console.log(amountFruit);
+ */
+```
+```js
+const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
+var  amountFruit = {};
+fruit.split(' ').forEach(function(i) { amountFruit[i] = (amountFruit[i]||0) + 1;});
+console.log(amountFruit);
+```
+
+
+
+
+
+
+
+
+
+
+
 
 
 
