--- a/answers/2.md
+++ b/answers/2.md
@@ -78,11 +78,11 @@ for (let key in obj) {
 Функция должна возвражать булевое значение
 ```
 ```js
-function checkKey() {
-    let user = {
+function checkKey(obj, key) {
+    user = {
         age: 18,
     };
-    console.log('age' in user);
+    return 'age' in user;
 };
 checkKey();
 ```
