--- a/answers/3.md
+++ b/answers/3.md
@@ -30,7 +30,7 @@ console.log( Math.floor(num) );
 ```
 ```js 
 let num = 10.36;
-let numTwo = num.toString();
+num.toString();
 console.log( parseInt(num * 10) / 10 );
 ```
 ## Задача 5
@@ -53,11 +53,23 @@ const COIN = Math.floor(Math.random() * 100);
     } else {
         console.log('орёл', COIN + '%')
     }
-}
+};
 
  for (i = 1; i <= 1000; i++) {
      coinFlip()
-}
+};
+```
+```js
+function coinFlip() {
+    
+const COIN = Math.floor(Math.random());
+    return COIN <= 0.3 ? 'решка' : 'орёл';
+};
+
+for (i = 1; i <= 1000; i++) {
+    coinFlip()
+};
+console.log()
 ```
 ## Задача 6
 ```
@@ -234,22 +246,7 @@ notIterationFruit()
 Функция должна вернуть массив ['Apple', 'Orange']
 ```
 ```js
-// 1 не доделал
-const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
-
-function deleteFruit(fruitTwo, fruitElement) {
-    fruitElement = 'Apple';
-    fruitTwo = fruit.filter(function (elem) {
-        return elem !== fruitElement
-    });
-
-    console.log(fruitTwo);
-    console.log(fruit);
-};
-deleteFruit();
-```
-```js
-// 2 не доделал
+//не доделал
 const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
 
 function deleteFruit(fruitTwo, fruitElement) {
@@ -257,7 +254,34 @@ function deleteFruit(fruitTwo, fruitElement) {
     fruitTwo = fruit.filter(item => item !== fruitElement);
 
     console.log(fruitTwo);
-    console.log(fruit);
+};
+deleteFruit();
+```
+```js
+// решение не по задаче (Math.abs не изучали)
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+
+function deleteFruit(fruitTwo, fruitElement) {
+    fruitElement = 'Apple';
+    fruitTwo = fruit.filter((elem, index) => {
+        return Math.abs(fruit.indexOf(fruitElement) - index) > 1
+    } )
+
+    console.log(fruitTwo);
+};
+deleteFruit();
+```
+```js
+// решение не по задаче (Math.abs не изучали)
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+
+function deleteFruit(fruitTwo, fruitElement) {
+    fruitElement = 'Apple';
+    fruitTwo = fruit.filter((elem, index) => {
+        
+    })
+
+    console.log(fruitTwo);
 };
 deleteFruit();
 ```
@@ -396,8 +420,14 @@ console.log(amountFruit);
 ```
 ```js
 const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
-var  amountFruit = {};
+let  amountFruit = {};
 fruit.split(' ').forEach(function(i) { amountFruit[i] = (amountFruit[i]||0) + 1;});
+console.log(amountFruit);
+```
+```js ???????
+const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
+let  amountFruit = fruit.split(' ').forEach(function(i) {
+    amountFruit[i] = (amountFruit[i]||0) + 1;});
 console.log(amountFruit);
 ```
 
