--- a/answers/2.md
+++ b/answers/2.md
@@ -79,12 +79,9 @@ for (let key in obj) {
 ```
 ```js
 function checkKey(obj, key) {
-    user = {
-        age: 18,
-    };
-    return 'age' in user;
+    return key in obj;
 };
-checkKey();
+
 ```
 ## Задача 2.8
 ```
