--- a/answers/3.md
+++ b/answers/3.md
@@ -29,9 +29,16 @@ console.log( Math.floor(num) );
 Напишите код, который преобразует число 10.36 в строку '10.3'
 ```
 ```js 
+// было
 let num = 10.36;
 num.toString();
 console.log( parseInt(num * 10) / 10 );
+```
+```js 
+// переделал
+let num = 10.36;
+let  numString = num.toString();
+console.log( parseInt(numString * 10) / 10 );
 ```
 ## Задача 5
 ```
@@ -44,32 +51,18 @@ console.log( parseInt(num * 10) / 10 );
 используя ранее написанную функцию и в конце выводить процент выпадения орла и решки
 ```
 ```js
-// НЕ ДОДЕЛАЛ 
 function coinFlip() {
     
-const COIN = Math.floor(Math.random() * 100);
-    if (COIN <= 30) {
-        console.log('решка', COIN + '%')
-    } else {
-        console.log('орёл', COIN + '%')
-    }
+const coin = Math.random();
+    return coin <= 0.3 ? 'решка' : 'орёл';
 };
 
- for (i = 1; i <= 1000; i++) {
-     coinFlip()
-};
-```
-```js
-function coinFlip() {
-    
-const COIN = Math.floor(Math.random());
-    return COIN <= 0.3 ? 'решка' : 'орёл';
-};
-
+let eagle = 0;
+let tails = 0;
 for (i = 1; i <= 1000; i++) {
-    coinFlip()
+    coinFlip() === 'орёл' ? eagle++ : tails++;
 };
-console.log()
+console.log(`орёл - ${eagle / 10}%, решка ${tails / 10} `)
 ```
 ## Задача 6
 ```
@@ -292,13 +285,22 @@ deleteFruit();
 Массив fruit не должен быть изменен
 ```
 ```js
+// было
 const fruit = ['Apple', 'Orange', 'Plum', 'pineapple'];
 const fruitNoP = fruit.filter(function (elem) {
     return elem <= 'P';
 });
 
 console.log(fruitNoP);
-console.log(fruit);
+```
+```js
+// переделал
+const fruit = ['Apple', 'Orange', 'Strawberry', 'Plum', 'pineapple'];
+const fruitNoP = fruit.filter(function(elem) {
+    return elem.toUpperCase()[0] !== 'P';
+});
+
+console.log(fruitNoP);
 ```
 ##Задача 21
 ```
@@ -309,15 +311,24 @@ console.log(fruit);
 Новый массив должен содержать только 1й и 3й елемент ['Apple', 'Plum']
 ```
 ```js
-const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+// было
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple',];
 const fruitNoTwoElement = fruit.slice();
 
 for (let i = 1; i < fruitNoTwoElement.length; i += 1) {
     fruitNoTwoElement.splice(i, 1);
-}; 
+};
 
 console.log(fruitNoTwoElement);
-console.log(fruit);
+```
+```js
+// переделал
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+const fruitNoTwoElement = fruit.filter(function(elem, index){
+    return (index + 1) % 2;
+});
+
+console.log(fruitNoTwoElement);
 ```
 ##Задача 22
 ```
@@ -350,7 +361,7 @@ const students = [
   { id: 5, name: 'Katie', grade: 64 }
 ];
 
-console.log(students.sort((a, b) => a.grade- b.grade));
+console.log(students.sort((prew, next) => prew.grade - next.grade));
 ```
 ##Задача 24
 ```
@@ -385,6 +396,7 @@ console.log(students.sort((a, b) => a.grade- b.grade));
 }
 ```
 ```js
+// было
 const students = [
   { id: 1, name: 'Quincy', grade: 21 },
   { id: 2, name: 'Jason', grade: 33 },
@@ -394,6 +406,23 @@ const students = [
 ];
 
 const studentsObjact = students.forEach(item => console.log(item)) ;
+```
+```js
+// нужно переделать, убрать пустой объект
+const students = [
+  { id: 1, name: 'Quincy', grade: 21 },
+  { id: 2, name: 'Jason', grade: 33 },
+  { id: 3, name: 'Alexis', grade: 87 },
+  { id: 4, name: 'Sam', grade: 100 },
+  { id: 5, name: 'Katie', grade: 64 }
+];
+
+const studentsObjact = {};
+students.forEach(array => {
+    studentsObjact[array.id] = array;
+});
+
+console.log(studentsObjact);
 ```
 ##Задача 25
 ```
@@ -407,33 +436,89 @@ const studentsObjact = students.forEach(item => console.log(item)) ;
 }
 ```
 ```js
-/*
-const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
-let amountFruit = {};
-
-fruit.split(' ').forEach(item =>{
-    
-});
-
-console.log(amountFruit);
- */
-```
-```js
+// нужно переделать, убрать пустой объект
 const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
 let  amountFruit = {};
 fruit.split(' ').forEach(function(i) { amountFruit[i] = (amountFruit[i]||0) + 1;});
 console.log(amountFruit);
 ```
-```js ???????
-const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
-let  amountFruit = fruit.split(' ').forEach(function(i) {
-    amountFruit[i] = (amountFruit[i]||0) + 1;});
-console.log(amountFruit);
+##Задача 26
 ```
+Создайте из объекта строку следующего вида
+'pineapple:2; apple:4; orange:3; plum:1'
+```
+```js
+const fruitsCount = {
+  pineapple: 2,
+  apple: 4,
+  orange: 3,
+  plum: 1
+}
 
+let value = Object.entries(fruitsCount)
+    .map(([index, item]) => (`${index}: ${item}`))
+    .join('; ');
 
+console.log(value);
+```
+##Задача 27
+```
+Напишите код, который присвоит переменной 'first' значение 'Apple', переменной 'rest' - все остальные значения массива
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
 
+let [first, ...rest] = fruit;
+rest = rest.toString();
 
+console.log(rest);
+```
+##Задача 28
+```
+Напишите код, который сохранит в новую переменную последнее значение массива 'fruit', не изменяя массив
+```
+```js
+// 1
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+const [...fruits] = fruit;
+const lastFruitArray = fruits[fruits.length -1]
+
+console.log(lastFruitArray);
+```
+```js
+// 2
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+const [...fruits] = fruit;
+const lastFruitArray = fruits.slice(-1)[0];
+
+console.log(lastFruitArray);
+```
+##Задача 29
+```
+Деструктуризируйте объект 
+У вас должно получиться 2 переменные `name` и `age`
+
+name - после деструктуризации поле `firstName` должно быть сохранено в переменну с именем `name`
+age - это не обязательное поле, если его не будет - значение age должно быть null
+```
+```js
+const user = {
+    firstName: 'John',
+    profile: {
+        age: 25,
+    },
+};
+
+let {
+    firstName: name,
+    profile: {
+        age = null,
+    },
+} = user;
+
+console.log(name);
+console.log(age);
+```
 
 
 
