--- a/answers/3.md
+++ b/answers/3.md
@@ -396,7 +396,6 @@ console.log(students.sort((prew, next) => prew.grade - next.grade));
 }
 ```
 ```js
-// было
 const students = [
   { id: 1, name: 'Quincy', grade: 21 },
   { id: 2, name: 'Jason', grade: 33 },
@@ -405,22 +404,10 @@ const students = [
   { id: 5, name: 'Katie', grade: 64 }
 ];
 
-const studentsObjact = students.forEach(item => console.log(item)) ;
-```
-```js
-// нужно переделать, убрать пустой объект
-const students = [
-  { id: 1, name: 'Quincy', grade: 21 },
-  { id: 2, name: 'Jason', grade: 33 },
-  { id: 3, name: 'Alexis', grade: 87 },
-  { id: 4, name: 'Sam', grade: 100 },
-  { id: 5, name: 'Katie', grade: 64 }
-];
-
-const studentsObjact = {};
-students.forEach(array => {
-    studentsObjact[array.id] = array;
-});
+const studentsObjact = students.reduce((accum, item) => {
+    accum[item.id] = item;
+    return accum;
+}, {});
 
 console.log(studentsObjact);
 ```
@@ -436,10 +423,20 @@ console.log(studentsObjact);
 }
 ```
 ```js
-// нужно переделать, убрать пустой объект
+// было
 const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
 let  amountFruit = {};
-fruit.split(' ').forEach(function(i) { amountFruit[i] = (amountFruit[i]||0) + 1;});
+fruit.split(' ').forEach(function(i) { amountFruit[i] = (amountFruit[i] || 0) + 1;});
+console.log(amountFruit);
+```
+```js
+// переделал
+const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
+let  amountFruit = fruit.split(' ')
+    .reduce((accum, item) => {
+    accum[item] = accum[item] ? accum[item] + 1 : accum[item] = 1;
+    return accum;
+    }, {});
 console.log(amountFruit);
 ```
 ##Задача 26
