--- a/answers/4.md
+++ b/answers/4.md
@@ -4,4 +4,62 @@
 ```
 ```js
 const fruits = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+
+const fruitsCopy = Array.from(fruits);
+
+console.log(fruitsCopy);
 ```
+## Задача 2
+```
+1. Создайте новый массив, который будет включать в себя значения из массивов fruits и otherFruits, используя оператор расширения
+2. Все значения в массиве должны быть уникальные
+```
+```js
+const fruits = ['Apple', 'Orange'];
+const otherFruits = ['Orange', 'Plum', 'Pineapple'];
+const valueArray = [...fruits, ...otherFruits];
+
+let result = valueArray.filter((item, index) => {
+    return valueArray.indexOf(item) === index
+});
+
+console.log(result);
+```
+## Задача 3
+```
+Скопируйте содержимое объекта user в новый объект, используя оператор расширения
+```
+```js
+const user = { id: 1, name: 'John', grade: 21 };
+const userCopyObj = ({...user});
+
+console.log(userCopyObj);
+```
+## Задача 4
+```
+Создайте новую переменную, которая будет включать в себя значение объектов `userFirstPart` и `userSecondPart`
+```
+```js
+const userFirstPart = { id: 1, name: 'John', grade: 21 };
+const userSecondPart = { lastName: 'Smith', profile: { age: 30 } };
+const userCopyObj = ({...userFirstPart, ...userSecondPart});
+
+console.log(userCopyObj);
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
