--- a/answers/4.md
+++ b/answers/4.md
@@ -9,6 +9,14 @@ const fruitsCopy = Array.from(fruits);
 
 console.log(fruitsCopy);
 ```
+```js
+// 2й вариант
+const fruits = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+
+const fruitsCopy = [...fruits];
+
+console.log(fruitsCopy);
+```
 ## Задача 2
 ```
 1. Создайте новый массив, который будет включать в себя значения из массивов fruits и otherFruits, используя оператор расширения
