--- a/answers/3.md
+++ b/answers/3.md
@@ -475,20 +475,11 @@ console.log(rest);
 Напишите код, который сохранит в новую переменную последнее значение массива 'fruit', не изменяя массив
 ```
 ```js
-// 1
+// исправил
 const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
-const [...fruits] = fruit;
-const lastFruitArray = fruits[fruits.length -1]
+const [...fruits] = fruit.slice(-1);
 
-console.log(lastFruitArray);
-```
-```js
-// 2
-const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
-const [...fruits] = fruit;
-const lastFruitArray = fruits.slice(-1)[0];
-
-console.log(lastFruitArray);
+console.log(fruits);
 ```
 ##Задача 29
 ```
