--- a/answers/3.md
+++ b/answers/3.md
@@ -31,14 +31,13 @@ console.log( Math.floor(num) );
 ```js 
 // было
 let num = 10.36;
-num.toString();
-console.log( parseInt(num * 10) / 10 );
+let  numString = num.toString();
+console.log( parseInt(numString * 10) / 10 );
 ```
 ```js 
 // переделал
 let num = 10.36;
-let  numString = num.toString();
-console.log( parseInt(numString * 10) / 10 );
+console.log( Math.floor(num * 10) / 10 + '' );
 ```
 ## Задача 5
 ```
@@ -52,17 +51,19 @@ console.log( parseInt(numString * 10) / 10 );
 ```
 ```js
 function coinFlip() {
-    
 const coin = Math.random();
     return coin <= 0.3 ? 'решка' : 'орёл';
 };
 
 let eagle = 0;
 let tails = 0;
-for (i = 1; i <= 1000; i++) {
+let tossUp = 99;
+
+for (i = 1; i <= tossUp; i++) {
     coinFlip() === 'орёл' ? eagle++ : tails++;
 };
-console.log(`орёл - ${eagle / 10}%, решка ${tails / 10} `)
+
+console.log(`орёл - ${eagle/tossUp * 100} %, решка ${tails/tossUp * 100} %`);
 ```
 ## Задача 6
 ```
@@ -239,8 +240,8 @@ notIterationFruit()
 Функция должна вернуть массив ['Apple', 'Orange']
 ```
 ```js
-// решение не по задаче (Math.abs не изучали)
-const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+// было
+const fruit = ['Apple', 'Orange', 'test', 'Plum', 'Pineapple'];
 
 function deleteFruit(fruitTwo, fruitElement) {
     fruitElement = 'Apple';
@@ -253,18 +254,18 @@ function deleteFruit(fruitTwo, fruitElement) {
 deleteFruit();
 ```
 ```js
-//
 const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
 
-function deleteFruit(fruitTwo, fruitElement) {
-    fruitElement = 'Apple';
-    fruitTwo = fruit.filter((elem, index) => {
-        
+function deleteFruit(fruit, fruitElement) {
+    let newFruit = fruit.slice();
+    let delFruit = newFruit.filter((elem, index) => {
+        return Math.abs(newFruit.indexOf(fruitElement) - index) > 1
     })
 
-    console.log(fruitTwo);
+    return delFruit;
 };
-deleteFruit();
+
+deleteFruit(newFruit, 'Apple');
 ```
 ## Задача 20
 ```
@@ -274,18 +275,27 @@ deleteFruit();
 ```
 ```js
 // было
-const fruit = ['Apple', 'Orange', 'Plum', 'pineapple'];
-const fruitNoP = fruit.filter(function (elem) {
-    return elem <= 'P';
+const fruit = ['Apple', 'Orange', 'Strawberry', 'Plum', 'pineapple'];
+const fruitNoP = fruit.filter(function(elem) {
+    return elem.toUpperCase()[0] !== 'P';
 });
 
 console.log(fruitNoP);
 ```
 ```js
-// переделал
+// 1
 const fruit = ['Apple', 'Orange', 'Strawberry', 'Plum', 'pineapple'];
 const fruitNoP = fruit.filter(function(elem) {
-    return elem.toUpperCase()[0] !== 'P';
+    return elem.charAt(0).toUpperCase() !== 'P';
+});
+
+console.log(fruitNoP);
+```
+```js
+// 2
+const fruit = ['Apple', 'Orange', 'Strawberry', 'Plum', 'pineapple'];
+const fruitNoP = fruit.filter(function(elem) {
+    return elem[0].toUpperCase() !== 'P';
 });
 
 console.log(fruitNoP);
@@ -422,7 +432,7 @@ console.log(amountFruit);
 const fruit = 'pineapple apple orange orange apple plum orange apple pineapple apple';
 let  amountFruit = fruit.split(' ')
     .reduce((accum, item) => {
-    accum[item] = accum[item] ? accum[item] + 1 : accum[item] = 1;
+    accum[item] = accum[item] ? accum[item] + 1 : 1;
     return accum;
     }, {});
 console.log(amountFruit);
@@ -463,11 +473,26 @@ console.log(rest);
 Напишите код, который сохранит в новую переменную последнее значение массива 'fruit', не изменяя массив
 ```
 ```js
-// исправил
+// было
 const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
 const [...fruits] = fruit.slice(-1);
 
 console.log(fruits);
+```
+```js
+/*
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+const [fruits] = fruit.slice(-1);
+
+console.log(fruits);
+*/
+```
+```js
+// переделал
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+const [lastFruit] = fruit.reverse();
+
+console.log(lastFruit);
 ```
 ##Задача 29
 ```
@@ -490,11 +515,73 @@ let {
     profile: {
         age = null,
     },
-} = user;
+} = user;вернёт
 
 console.log(name);
 console.log(age);
 ```
+##Задача 30
+``` 19
+const fruit = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+
+function deleteFruit(fruitTwo, fruitElement) {
+    fruitElement = 'Apple';
+    fruitTwo = fruit.filter((elem, index) => {
+        return Math.abs(fruit.indexOf(fruitElement) - index) > 1
+    } )
+
+    console.log(fruitTwo);
+};
+deleteFruit();
+
+функция ничего не вернёт, а только выведет результат в консоль
+```
+##Задача 31
+```
+В каких случаях в стрелочной функции не нужно писать return?
+
+return не нужно указывать когда стрелочная функция написана без фигурных скобок
+```
+##Задача 32
+``` 25
+let accum = [];
+let item = 2;
+let elem = accum[item];
+
+accum[item] = accum[item] ? accum[item] + 1 : accum[item] = 1;
+--------------------------
+1 . Напишите очередность выполнения
+2. Сократите код
+3. Что будет в переменной ""elem"" и почему?
+
+
+1.
+- создаётся переменная accum с пустым массивом
+- создаётся переменная item с числом 2
+- создаётся переменная elem и ей присваивается массив accum с элементом под индексом 2,
+поскольку пустой масив равен пустой строке то elem будет равно undefined.
+- тернарный оператор обращается к accum[item] где значение undefined и возвращает false
+и далее присваивает значение по условию 1.
+
+
+2.
+accum[item] ? accum[item] + 1 : 1;
+
+3.
+в переменно elem будет undefined. Ей присваивается массив accum с элементом под индексом 2,
+поскольку пустой масив равен пустой строке то elem будет равно undefined.
+```
+
+
+
+
+
+
+
+
+
+
+
 
 
 
