--- a/answers/3.md
+++ b/answers/3.md
@@ -24,7 +24,7 @@ let num = '10.3';
 let value = +num;
 console.log( Math.floor(num) );
 ```
-## Задача 4
+## Задача 4 
 ```
 Напишите код, который преобразует число 10.36 в строку '10.3'
 ```
@@ -265,7 +265,7 @@ function deleteFruit(fruit, fruitElement) {
     return delFruit;
 };
 
-deleteFruit(newFruit, 'Apple');
+deleteFruit(fruit, 'Apple');
 ```
 ## Задача 20
 ```
